# SleiTRT

./: CMakeLists.txt  README.md  file.txt  main.cpp
Classes/: FileReader.cpp  FileReader.h  FrameworkTimer.cpp  FrameworkTimer.h  main.cpp
Resources/: file - Copy (68) - Copy.txt
